feat: small cleanup